Apply spacer-utility to repair vertical spacing

--- a/less/index.less
+++ b/less/index.less
@@ -32,3 +32,6 @@ h1, h2, h3, h4, h5 {
     background: blanchedalmond;
     padding: 20px 0;
 }
+
+div {
+}
